--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,3 +5,6 @@
 	ui = true
 [push]
 	default = simple
+[alias]
+	au = add -u
+	ll = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
