git status alias

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,3 +8,4 @@
 [alias]
 	au = add -u
 	ll = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	st = status
