--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,3 +10,4 @@
 	st = status
 	setgithub = !git config user.name "nickvanderstel" && git config user.email "njvander@gmail.com"
 	setwork = !git config user.name "NicholasVanderStel" && git config user.email "nicholas.vanderstel@dornerworks.com"
+	setgitlab = !git config user.name "nickvanderstel" && git config user.email "nick.vanderstel@protonmail.com"
